--- a/traduction.ipynb
+++ b/traduction.ipynb
@@ -2,183 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pexpect in ./.venv/lib/python3.12/site-packages (4.9.0)\n",
-      "Requirement already satisfied: ptyprocess>=0.5 in ./.venv/lib/python3.12/site-packages (from pexpect) (0.7.0)\n",
-      "Collecting roboflow\n",
-      "  Using cached roboflow-1.1.51-py3-none-any.whl.metadata (9.7 kB)\n",
-      "Collecting certifi (from roboflow)\n",
-      "  Using cached certifi-2024.12.14-py3-none-any.whl.metadata (2.3 kB)\n",
-      "Collecting idna==3.7 (from roboflow)\n",
-      "  Using cached idna-3.7-py3-none-any.whl.metadata (9.9 kB)\n",
-      "Collecting cycler (from roboflow)\n",
-      "  Using cached cycler-0.12.1-py3-none-any.whl.metadata (3.8 kB)\n",
-      "Collecting kiwisolver>=1.3.1 (from roboflow)\n",
-      "  Using cached kiwisolver-1.4.8-cp312-cp312-macosx_10_13_x86_64.whl.metadata (6.2 kB)\n",
-      "Collecting matplotlib (from roboflow)\n",
-      "  Using cached matplotlib-3.10.0-cp312-cp312-macosx_10_13_x86_64.whl.metadata (11 kB)\n",
-      "Collecting numpy>=1.18.5 (from roboflow)\n",
-      "  Using cached numpy-2.2.1-cp312-cp312-macosx_14_0_x86_64.whl.metadata (62 kB)\n",
-      "Collecting opencv-python-headless==4.10.0.84 (from roboflow)\n",
-      "  Using cached opencv_python_headless-4.10.0.84-cp37-abi3-macosx_12_0_x86_64.whl.metadata (20 kB)\n",
-      "Collecting Pillow>=7.1.2 (from roboflow)\n",
-      "  Using cached pillow-11.1.0-cp312-cp312-macosx_10_13_x86_64.whl.metadata (9.1 kB)\n",
-      "Requirement already satisfied: python-dateutil in ./.venv/lib/python3.12/site-packages (from roboflow) (2.9.0.post0)\n",
-      "Collecting python-dotenv (from roboflow)\n",
-      "  Using cached python_dotenv-1.0.1-py3-none-any.whl.metadata (23 kB)\n",
-      "Collecting requests (from roboflow)\n",
-      "  Using cached requests-2.32.3-py3-none-any.whl.metadata (4.6 kB)\n",
-      "Requirement already satisfied: six in ./.venv/lib/python3.12/site-packages (from roboflow) (1.17.0)\n",
-      "Collecting urllib3>=1.26.6 (from roboflow)\n",
-      "  Using cached urllib3-2.3.0-py3-none-any.whl.metadata (6.5 kB)\n",
-      "Collecting tqdm>=4.41.0 (from roboflow)\n",
-      "  Using cached tqdm-4.67.1-py3-none-any.whl.metadata (57 kB)\n",
-      "Collecting PyYAML>=5.3.1 (from roboflow)\n",
-      "  Using cached PyYAML-6.0.2-cp312-cp312-macosx_10_9_x86_64.whl.metadata (2.1 kB)\n",
-      "Collecting requests-toolbelt (from roboflow)\n",
-      "  Using cached requests_toolbelt-1.0.0-py2.py3-none-any.whl.metadata (14 kB)\n",
-      "Collecting filetype (from roboflow)\n",
-      "  Using cached filetype-1.2.0-py2.py3-none-any.whl.metadata (6.5 kB)\n",
-      "Collecting contourpy>=1.0.1 (from matplotlib->roboflow)\n",
-      "  Using cached contourpy-1.3.1-cp312-cp312-macosx_10_13_x86_64.whl.metadata (5.4 kB)\n",
-      "Collecting fonttools>=4.22.0 (from matplotlib->roboflow)\n",
-      "  Using cached fonttools-4.55.3-cp312-cp312-macosx_10_13_x86_64.whl.metadata (165 kB)\n",
-      "Requirement already satisfied: packaging>=20.0 in ./.venv/lib/python3.12/site-packages (from matplotlib->roboflow) (24.2)\n",
-      "Collecting pyparsing>=2.3.1 (from matplotlib->roboflow)\n",
-      "  Using cached pyparsing-3.2.1-py3-none-any.whl.metadata (5.0 kB)\n",
-      "Collecting charset-normalizer<4,>=2 (from requests->roboflow)\n",
-      "  Using cached charset_normalizer-3.4.1-cp312-cp312-macosx_10_13_universal2.whl.metadata (35 kB)\n",
-      "Using cached roboflow-1.1.51-py3-none-any.whl (81 kB)\n",
-      "Using cached idna-3.7-py3-none-any.whl (66 kB)\n",
-      "Using cached opencv_python_headless-4.10.0.84-cp37-abi3-macosx_12_0_x86_64.whl (56.5 MB)\n",
-      "Using cached kiwisolver-1.4.8-cp312-cp312-macosx_10_13_x86_64.whl (66 kB)\n",
-      "Using cached numpy-2.2.1-cp312-cp312-macosx_14_0_x86_64.whl (6.7 MB)\n",
-      "Using cached pillow-11.1.0-cp312-cp312-macosx_10_13_x86_64.whl (3.2 MB)\n",
-      "Using cached PyYAML-6.0.2-cp312-cp312-macosx_10_9_x86_64.whl (183 kB)\n",
-      "Using cached tqdm-4.67.1-py3-none-any.whl (78 kB)\n",
-      "Using cached urllib3-2.3.0-py3-none-any.whl (128 kB)\n",
-      "Using cached certifi-2024.12.14-py3-none-any.whl (164 kB)\n",
-      "Using cached cycler-0.12.1-py3-none-any.whl (8.3 kB)\n",
-      "Using cached filetype-1.2.0-py2.py3-none-any.whl (19 kB)\n",
-      "Using cached matplotlib-3.10.0-cp312-cp312-macosx_10_13_x86_64.whl (8.2 MB)\n",
-      "Using cached python_dotenv-1.0.1-py3-none-any.whl (19 kB)\n",
-      "Using cached requests-2.32.3-py3-none-any.whl (64 kB)\n",
-      "Using cached requests_toolbelt-1.0.0-py2.py3-none-any.whl (54 kB)\n",
-      "Using cached charset_normalizer-3.4.1-cp312-cp312-macosx_10_13_universal2.whl (196 kB)\n",
-      "Using cached contourpy-1.3.1-cp312-cp312-macosx_10_13_x86_64.whl (271 kB)\n",
-      "Using cached fonttools-4.55.3-cp312-cp312-macosx_10_13_x86_64.whl (2.3 MB)\n",
-      "Using cached pyparsing-3.2.1-py3-none-any.whl (107 kB)\n",
-      "Installing collected packages: filetype, urllib3, tqdm, PyYAML, python-dotenv, pyparsing, Pillow, numpy, kiwisolver, idna, fonttools, cycler, charset-normalizer, certifi, requests, opencv-python-headless, contourpy, requests-toolbelt, matplotlib, roboflow\n",
-      "Successfully installed Pillow-11.1.0 PyYAML-6.0.2 certifi-2024.12.14 charset-normalizer-3.4.1 contourpy-1.3.1 cycler-0.12.1 filetype-1.2.0 fonttools-4.55.3 idna-3.7 kiwisolver-1.4.8 matplotlib-3.10.0 numpy-2.2.1 opencv-python-headless-4.10.0.84 pyparsing-3.2.1 python-dotenv-1.0.1 requests-2.32.3 requests-toolbelt-1.0.0 roboflow-1.1.51 tqdm-4.67.1 urllib3-2.3.0\n",
-      "Collecting ultralytics\n",
-      "  Downloading ultralytics-8.3.63-py3-none-any.whl.metadata (35 kB)\n",
-      "Requirement already satisfied: numpy>=1.23.0 in ./.venv/lib/python3.12/site-packages (from ultralytics) (2.2.1)\n",
-      "Collecting numpy>=1.23.0 (from ultralytics)\n",
-      "  Using cached numpy-1.26.4-cp312-cp312-macosx_10_9_x86_64.whl.metadata (61 kB)\n",
-      "Requirement already satisfied: matplotlib>=3.3.0 in ./.venv/lib/python3.12/site-packages (from ultralytics) (3.10.0)\n",
-      "Collecting opencv-python>=4.6.0 (from ultralytics)\n",
-      "  Using cached opencv_python-4.11.0.86-cp37-abi3-macosx_13_0_x86_64.whl.metadata (20 kB)\n",
-      "Requirement already satisfied: pillow>=7.1.2 in ./.venv/lib/python3.12/site-packages (from ultralytics) (11.1.0)\n",
-      "Requirement already satisfied: pyyaml>=5.3.1 in ./.venv/lib/python3.12/site-packages (from ultralytics) (6.0.2)\n",
-      "Requirement already satisfied: requests>=2.23.0 in ./.venv/lib/python3.12/site-packages (from ultralytics) (2.32.3)\n",
-      "Collecting scipy>=1.4.1 (from ultralytics)\n",
-      "  Using cached scipy-1.15.1-cp312-cp312-macosx_14_0_x86_64.whl.metadata (61 kB)\n",
-      "Collecting torch>=1.8.0 (from ultralytics)\n",
-      "  Using cached torch-2.2.2-cp312-none-macosx_10_9_x86_64.whl.metadata (25 kB)\n",
-      "Collecting torchvision>=0.9.0 (from ultralytics)\n",
-      "  Using cached torchvision-0.17.2-cp312-cp312-macosx_10_13_x86_64.whl.metadata (6.6 kB)\n",
-      "Requirement already satisfied: tqdm>=4.64.0 in ./.venv/lib/python3.12/site-packages (from ultralytics) (4.67.1)\n",
-      "Requirement already satisfied: psutil in ./.venv/lib/python3.12/site-packages (from ultralytics) (6.1.1)\n",
-      "Collecting py-cpuinfo (from ultralytics)\n",
-      "  Using cached py_cpuinfo-9.0.0-py3-none-any.whl.metadata (794 bytes)\n",
-      "Collecting pandas>=1.1.4 (from ultralytics)\n",
-      "  Using cached pandas-2.2.3-cp312-cp312-macosx_10_9_x86_64.whl.metadata (89 kB)\n",
-      "Collecting seaborn>=0.11.0 (from ultralytics)\n",
-      "  Using cached seaborn-0.13.2-py3-none-any.whl.metadata (5.4 kB)\n",
-      "Collecting ultralytics-thop>=2.0.0 (from ultralytics)\n",
-      "  Downloading ultralytics_thop-2.0.14-py3-none-any.whl.metadata (9.4 kB)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in ./.venv/lib/python3.12/site-packages (from matplotlib>=3.3.0->ultralytics) (1.3.1)\n",
-      "Requirement already satisfied: cycler>=0.10 in ./.venv/lib/python3.12/site-packages (from matplotlib>=3.3.0->ultralytics) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in ./.venv/lib/python3.12/site-packages (from matplotlib>=3.3.0->ultralytics) (4.55.3)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in ./.venv/lib/python3.12/site-packages (from matplotlib>=3.3.0->ultralytics) (1.4.8)\n",
-      "Requirement already satisfied: packaging>=20.0 in ./.venv/lib/python3.12/site-packages (from matplotlib>=3.3.0->ultralytics) (24.2)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in ./.venv/lib/python3.12/site-packages (from matplotlib>=3.3.0->ultralytics) (3.2.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in ./.venv/lib/python3.12/site-packages (from matplotlib>=3.3.0->ultralytics) (2.9.0.post0)\n",
-      "Collecting pytz>=2020.1 (from pandas>=1.1.4->ultralytics)\n",
-      "  Using cached pytz-2024.2-py2.py3-none-any.whl.metadata (22 kB)\n",
-      "Collecting tzdata>=2022.7 (from pandas>=1.1.4->ultralytics)\n",
-      "  Using cached tzdata-2024.2-py2.py3-none-any.whl.metadata (1.4 kB)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in ./.venv/lib/python3.12/site-packages (from requests>=2.23.0->ultralytics) (3.4.1)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in ./.venv/lib/python3.12/site-packages (from requests>=2.23.0->ultralytics) (3.7)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in ./.venv/lib/python3.12/site-packages (from requests>=2.23.0->ultralytics) (2.3.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in ./.venv/lib/python3.12/site-packages (from requests>=2.23.0->ultralytics) (2024.12.14)\n",
-      "Collecting filelock (from torch>=1.8.0->ultralytics)\n",
-      "  Using cached filelock-3.16.1-py3-none-any.whl.metadata (2.9 kB)\n",
-      "Collecting typing-extensions>=4.8.0 (from torch>=1.8.0->ultralytics)\n",
-      "  Using cached typing_extensions-4.12.2-py3-none-any.whl.metadata (3.0 kB)\n",
-      "Collecting sympy (from torch>=1.8.0->ultralytics)\n",
-      "  Using cached sympy-1.13.3-py3-none-any.whl.metadata (12 kB)\n",
-      "Collecting networkx (from torch>=1.8.0->ultralytics)\n",
-      "  Using cached networkx-3.4.2-py3-none-any.whl.metadata (6.3 kB)\n",
-      "Collecting jinja2 (from torch>=1.8.0->ultralytics)\n",
-      "  Using cached jinja2-3.1.5-py3-none-any.whl.metadata (2.6 kB)\n",
-      "Collecting fsspec (from torch>=1.8.0->ultralytics)\n",
-      "  Using cached fsspec-2024.12.0-py3-none-any.whl.metadata (11 kB)\n",
-      "Requirement already satisfied: six>=1.5 in ./.venv/lib/python3.12/site-packages (from python-dateutil>=2.7->matplotlib>=3.3.0->ultralytics) (1.17.0)\n",
-      "Collecting MarkupSafe>=2.0 (from jinja2->torch>=1.8.0->ultralytics)\n",
-      "  Using cached MarkupSafe-3.0.2-cp312-cp312-macosx_10_13_universal2.whl.metadata (4.0 kB)\n",
-      "Collecting mpmath<1.4,>=1.1.0 (from sympy->torch>=1.8.0->ultralytics)\n",
-      "  Using cached mpmath-1.3.0-py3-none-any.whl.metadata (8.6 kB)\n",
-      "Downloading ultralytics-8.3.63-py3-none-any.whl (910 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m910.2/910.2 kB\u001b[0m \u001b[31m5.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hUsing cached numpy-1.26.4-cp312-cp312-macosx_10_9_x86_64.whl (20.3 MB)\n",
-      "Using cached opencv_python-4.11.0.86-cp37-abi3-macosx_13_0_x86_64.whl (56.7 MB)\n",
-      "Using cached pandas-2.2.3-cp312-cp312-macosx_10_9_x86_64.whl (12.5 MB)\n",
-      "Using cached scipy-1.15.1-cp312-cp312-macosx_14_0_x86_64.whl (28.0 MB)\n",
-      "Using cached seaborn-0.13.2-py3-none-any.whl (294 kB)\n",
-      "Using cached torch-2.2.2-cp312-none-macosx_10_9_x86_64.whl (150.8 MB)\n",
-      "Using cached torchvision-0.17.2-cp312-cp312-macosx_10_13_x86_64.whl (1.7 MB)\n",
-      "Downloading ultralytics_thop-2.0.14-py3-none-any.whl (26 kB)\n",
-      "Using cached py_cpuinfo-9.0.0-py3-none-any.whl (22 kB)\n",
-      "Using cached pytz-2024.2-py2.py3-none-any.whl (508 kB)\n",
-      "Using cached typing_extensions-4.12.2-py3-none-any.whl (37 kB)\n",
-      "Using cached tzdata-2024.2-py2.py3-none-any.whl (346 kB)\n",
-      "Using cached filelock-3.16.1-py3-none-any.whl (16 kB)\n",
-      "Using cached fsspec-2024.12.0-py3-none-any.whl (183 kB)\n",
-      "Using cached jinja2-3.1.5-py3-none-any.whl (134 kB)\n",
-      "Using cached networkx-3.4.2-py3-none-any.whl (1.7 MB)\n",
-      "Using cached sympy-1.13.3-py3-none-any.whl (6.2 MB)\n",
-      "Using cached MarkupSafe-3.0.2-cp312-cp312-macosx_10_13_universal2.whl (14 kB)\n",
-      "Using cached mpmath-1.3.0-py3-none-any.whl (536 kB)\n",
-      "Installing collected packages: pytz, py-cpuinfo, mpmath, tzdata, typing-extensions, sympy, numpy, networkx, MarkupSafe, fsspec, filelock, scipy, pandas, opencv-python, jinja2, torch, ultralytics-thop, torchvision, seaborn, ultralytics\n",
-      "  Attempting uninstall: numpy\n",
-      "    Found existing installation: numpy 2.2.1\n",
-      "    Uninstalling numpy-2.2.1:\n",
-      "      Successfully uninstalled numpy-2.2.1\n",
-      "Successfully installed MarkupSafe-3.0.2 filelock-3.16.1 fsspec-2024.12.0 jinja2-3.1.5 mpmath-1.3.0 networkx-3.4.2 numpy-1.26.4 opencv-python-4.11.0.86 pandas-2.2.3 py-cpuinfo-9.0.0 pytz-2024.2 scipy-1.15.1 seaborn-0.13.2 sympy-1.13.3 torch-2.2.2 torchvision-0.17.2 typing-extensions-4.12.2 tzdata-2024.2 ultralytics-8.3.63 ultralytics-thop-2.0.14\n",
-      "Collecting fpdf2\n",
-      "  Using cached fpdf2-2.8.2-py2.py3-none-any.whl.metadata (67 kB)\n",
-      "Collecting defusedxml (from fpdf2)\n",
-      "  Using cached defusedxml-0.7.1-py2.py3-none-any.whl.metadata (32 kB)\n",
-      "Requirement already satisfied: Pillow!=9.2.*,>=6.2.2 in ./.venv/lib/python3.12/site-packages (from fpdf2) (11.1.0)\n",
-      "Requirement already satisfied: fonttools>=4.34.0 in ./.venv/lib/python3.12/site-packages (from fpdf2) (4.55.3)\n",
-      "Using cached fpdf2-2.8.2-py2.py3-none-any.whl (236 kB)\n",
-      "Using cached defusedxml-0.7.1-py2.py3-none-any.whl (25 kB)\n",
-      "Installing collected packages: defusedxml, fpdf2\n",
-      "Successfully installed defusedxml-0.7.1 fpdf2-2.8.2\n"
+      "Collecting python-docx\n",
+      "  Using cached python_docx-1.1.2-py3-none-any.whl.metadata (2.0 kB)\n",
+      "Collecting lxml>=3.1.0 (from python-docx)\n",
+      "  Using cached lxml-5.3.0-cp312-cp312-macosx_10_9_x86_64.whl.metadata (3.8 kB)\n",
+      "Requirement already satisfied: typing-extensions>=4.9.0 in ./.venv/lib/python3.12/site-packages (from python-docx) (4.12.2)\n",
+      "Using cached python_docx-1.1.2-py3-none-any.whl (244 kB)\n",
+      "Using cached lxml-5.3.0-cp312-cp312-macosx_10_9_x86_64.whl (4.4 MB)\n",
+      "Installing collected packages: lxml, python-docx\n",
+      "Successfully installed lxml-5.3.0 python-docx-1.1.2\n"
      ]
     }
    ],
    "source": [
     "!pip install roboflow\n",
     "!pip install ultralytics\n",
-    "!pip install fpdf2\n"
+    "!pip install fpdf2\n",
+    "!pip install python-docx\n",
+    "\n"
    ]
   },
   {
@@ -574,6 +422,53 @@
     "\n",
     "# Remplacez 'FreeSerif.ttf' par le chemin de votre fichier de police et assurez-vous d'avoir les versions bold et italic si nécessaire\n",
     "generate_pdf_from_json('nouveau_fichier.json', 'output.pdf')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Word généré avec succès : output.docx\n"
+     ]
+    }
+   ],
+   "source": [
+    "from docx import Document\n",
+    "import json\n",
+    "\n",
+    "def generate_word_from_json(json_file, output_file):\n",
+    "    # Charger les données JSON\n",
+    "    with open(json_file, 'r', encoding='utf-8') as file:\n",
+    "        data = json.load(file)\n",
+    "\n",
+    "    # Créer un document Word\n",
+    "    document = Document()\n",
+    "\n",
+    "    # Ajouter un titre principal\n",
+    "    document.add_heading('Traduction du JSON', level=1)\n",
+    "\n",
+    "    # Parcourir les sections\n",
+    "    for section in data.get(\"sections\", []):\n",
+    "        # Ajouter le titre de la section\n",
+    "        section_name = section.get(\"name\", \"Section sans titre\")\n",
+    "        document.add_heading(section_name, level=2)\n",
+    "\n",
+    "        # Ajouter les labels comme contenu\n",
+    "        for shape in section.get(\"shapes\", []):\n",
+    "            label = shape.get(\"label\", \"Label manquant\")\n",
+    "            document.add_paragraph(label)\n",
+    "\n",
+    "    # Sauvegarder le fichier Word\n",
+    "    document.save(output_file)\n",
+    "    print(f\"Word généré avec succès : {output_file}\")\n",
+    "\n",
+    "# Remplacez 'nouveau_fichier.json' par le chemin de votre fichier JSON d'entrée\n",
+    "generate_word_from_json('nouveau_fichier.json', 'output.docx')\n"
    ]
   }
  ],
